# splunk-cloud-cli

./: .gitallowed  .gitignore  Cargo.toml  README.md  SECURITY.md  TODO.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: splunk-cloud-cli.rb
src/: auth.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  util.rs
src/commands/: alert.rs  auth.rs  credentials.rs  dashboard.rs  federated.rs  index.rs  knowledge.rs  kvstore.rs  metrics.rs  mod.rs  saved_search.rs  search.rs
src/config/: credential_store.rs  mod.rs
tests/: integration.rs
